WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
26017
some layout tests crashed when enabled XHTMLMP
https://bugs.webkit.org/show_bug.cgi?id=26017
Summary
some layout tests crashed when enabled XHTMLMP
yichao.yin
Reported
2009-05-26 00:02:44 PDT
build WebKit with XHTMLMP enabled, some layout tests relevant to XPATH will cause DumpRenderTree crashed.
Attachments
patch for fixing this issue
(1.12 KB, patch)
2009-05-26 00:06 PDT
,
yichao.yin
mjs
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
yichao.yin
Comment 1
2009-05-26 00:06:57 PDT
Created
attachment 30664
[details]
patch for fixing this issue
Maciej Stachowiak
Comment 2
2009-05-26 00:55:46 PDT
Comment on
attachment 30664
[details]
patch for fixing this issue r=me
George Staikos
Comment 3
2009-05-26 19:54:38 PDT
r44173
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug