2009-05-26  Yichao Yin  <yichao.yin@torchmobile.com.cn>

Reviewed by Maciej Stachowiak.

        Fix the crash issue while running layout tests after enabled XHTMLMP
        https://bugs.webkit.org/show_bug.cgi?id=26017



Canonical link: https://commits.webkit.org/36032@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@44173 268f45cc-cd09-0410-ab3c-d52691b4dbfc